[package]
name = "update_vendor_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
vfs = "0.9.0"
zip = { version = "0.6.4", default-features = false, features =  ["deflate"] }